--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-<h1>Atom and Basic Elements</h1>
-<p>This is a sentence telling you that this is in paragraph format. This code contains the following:</p>
+<h1>Ship It Squirrel Resume</h1>
+<p>My duties were mainly focused on popping up when projects were successfully completed. My previous employers include:</p>
 <ul>
-  <li>H1</li>
-  <li>H2</li>
-  <li>P</li>
-  <li>IMG</li>
-  <li>LI</li>
-  <li>A</li>
-  <li>UL</li>
-<h2>The Ship It Squirrel</h2>
+  <li>GitHub</li>
+  <li>Tree in front of the Main Libary</li>
+  <li>Ron's Squirrel's</li>
+  <li>Private Consultant</li>
+  <li>Where's Waldo writter</li>
+  <li>Professional Hide-and-Seek player</li>
+  <li>Garbage Eater</li>
+<h2>The Ship It Squirrel A.K.A "Me"</h2>
 
-<p>Click the Squirrel for more information</p>
+<p>Click my picture to see why I exist</p>
 
 <a href="https://www.quora.com/On-GitHub-what-is-the-significance-of-the-Ship-It-squirrel" target="_blank">
   <img src="https://qph.ec.quoracdn.net/main-qimg-c8781a4bb1f17e330b50cb35f851da05.webp" alt="Ship It Squirrel">
